hello-namespace/config-root/cluster/prod-ns-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-be-prod
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: env
        allowedRegex: "$prod^"
#    enforcementAction: dryrun
